--- a/css/cores.css
+++ b/css/cores.css
@@ -7,7 +7,7 @@
   --cor-p1: #d5ac61;
   --cor-botao: #243b55;
   --cor-gradient-p1: linear-gradient(to right, #d5ac61, #fcda9b, #ffeac4);
-  --cor-gradient-p2: linear-gradient(to left, #d5ac61, #fcda9b, #ffeac4);
+  --cor-gradient-p2: linear-gradient(to right, #ad8c4e, #fcd58b, #fce1b1);
 }
 
 .cor-0 {
