--- a/css/main.css
+++ b/css/main.css
@@ -40,7 +40,17 @@
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
   border-radius: 6px;
   transition: 0.5s;
-  background: #fff;
+  background: #141e30; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #243b55,
+    #141e30
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #243b55,
+    #141e30
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
 .card:hover {
@@ -78,12 +88,12 @@
   display: block;
   width: 100%;
   height: 2px;
-  background: var(--cor-1);
+  background: var(--cor-0);
 }
 
 .selecionar {
-  background: var(--cor-1);
-  color: var(--cor-2);
+  background: var(--cor-gradient-p1);
+  color: var(--cor-1);
   padding: 12px;
   transition: 0.3s;
   margin-top: 60px;
@@ -96,7 +106,7 @@
 }
 
 .selecionar:hover {
-  background: #162536;
+  background: var(--cor-gradient-p2);
 }
 
 @media (max-width: 500px) {
